# Sigma

./: .gitignore  CMakeLists.txt  README.md  Sigma.vcxproj  Sigma.vcxproj.filters  moc.props  w_build.bat
Release/Sigma.tlog/: CL.read.1.tlog  CL.write.1.tlog  Sigma.lastbuildstate  cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
docs/doxygen/: config  layout.xml
docs/gliffy/: chaos_suite_overview  overview  runtime_structure
ext/ArcaneCore/include/arcanecore/base/: Exceptions.hpp  Preproc.hpp  Types.hpp
ext/ArcaneCore/include/arcanecore/base/clock/: ClockOperations.hpp
ext/ArcaneCore/include/arcanecore/base/data/: BinaryOperations.hpp  BitwiseFloat.hpp  ByteOperations.hpp
ext/ArcaneCore/include/arcanecore/base/introspect/: IntrospectOperations.hpp
ext/ArcaneCore/include/arcanecore/base/math/: MathConstants.hpp  MathOperations.hpp
ext/ArcaneCore/include/arcanecore/base/os/: OSOperations.hpp
ext/ArcaneCore/include/arcanecore/base/str/: StringConstants.hpp  StringOperations.hpp  UTF8String.hpp
ext/ArcaneCore/include/arcanecore/gfx/: Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorOperations.hpp
ext/ArcaneCore/include/arcanecore/io/format/: ANSI.hpp  FormatOperations.hpp
ext/ArcaneCore/include/arcanecore/io/sys/: FileHandle.hpp  FileReader.hpp  FileSystemOperations.hpp  FileWriter.hpp  Path.hpp
ext/ArcaneCore/include/arcanecore/test/: ArcTest.hpp  TestExceptions.hpp  TestLogger.hpp
ext/ArcaneCore/include/arcanecore/test/log_formatter/: AbstractTestLogFormatter.hpp  HTMLTestLogFormatter.hpp  PlainTestLogFormatter.hpp  PrettyTestLogFormatter.hpp  XMLTestLogFormatter.hpp
ext/ArcaneCore/lib/win_x86/: arcanecore_gfx.lib
ext/ArcaneLog/include/arcanelog/: AbstractOutput.hpp  Input.hpp  LogHandler.hpp  Logging.hpp  Profile.hpp  Shared.hpp  Stream.hpp  Verbosity.hpp
ext/ArcaneLog/include/arcanelog/outputs/: FileOutput.hpp  StdOutput.hpp
ext/ArcaneLog/lib/win_x86/: arcanelog_shared.lib
ext/ChaosCore/include/chaoscore/base/: BaseExceptions.hpp  BaseLiterals.hpp  Exceptions.hpp  Preproc.hpp  Types.hpp
ext/ChaosCore/include/chaoscore/base/clock/: ClockOperations.hpp
ext/ChaosCore/include/chaoscore/base/data/: BinaryOperations.hpp  BitwiseFloat.hpp  ByteOperations.hpp
ext/ChaosCore/include/chaoscore/base/introspect/: IntrospectOperations.hpp
ext/ChaosCore/include/chaoscore/base/math/: MathConstants.hpp  MathOperations.hpp
ext/ChaosCore/include/chaoscore/base/os/: OSOperations.hpp
ext/ChaosCore/include/chaoscore/base/str/: StringConstants.hpp  StringOperations.hpp  UTF8String.hpp
ext/ChaosCore/include/chaoscore/base/uni/: UTF8String.hpp  UnicodeConstants.hpp  UnicodeOperations.hpp
ext/ChaosCore/include/chaoscore/gfx/: Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorOperations.hpp
ext/ChaosCore/include/chaoscore/io/format/: ANSI.hpp  FormatOperations.hpp
ext/ChaosCore/include/chaoscore/io/sys/: FileHandle.hpp  FileReader.hpp  FileSystemExceptions.hpp  FileSystemOperations.hpp  FileWriter.hpp  Path.hpp
ext/ChaosCore/include/chaoscore/test/: ChaosTest.hpp  TestExceptions.hpp  TestLogger.hpp
ext/ChaosCore/include/chaoscore/test/log_formatter/: AbstractTestLogFormatter.hpp  HTMLTestLogFormatter.hpp  PlainTestLogFormatter.hpp  PrettyTestLogFormatter.hpp  XMLTestLogFormatter.hpp
ext/ChaosCore/lib/win_x86/: chaoscore_gfx.lib
ext/ChaosLog/include/chlog/: AbstractOutput.hpp  Input.hpp  LogHandler.hpp  Logging.hpp  Profile.hpp  Stream.hpp  Verbosity.hpp
ext/ChaosLog/include/chlog/outputs/: FileOutput.hpp  StdOutput.hpp
ext/ChaosLog/lib/win_x86/: chlog.lib
ext/MetaEngine/include/json/: json.h
ext/MetaEngine/include/meta/: Data.hpp  Data.inl
ext/MetaEngine/include/metaeng/: Data.hpp
ext/MetaEngine/include/metaengine/: Document.hpp
ext/MetaEngine/include/metaengine/visitors/: Path.hpp  Primitive.hpp  String.hpp
ext/MetaEngine/lib/win_x86/: metaengine.lib
meta/gui/: logging.json
meta/gui/resources/: fonts.json  locations.json
meta/gui/widgets/: startup.json
meta/resources/: globals.json
res/: linter_template.cpp
src/cpp/meta_qt/: __meta_qt.hpp
src/cpp/meta_qt/core/: Geometry.cpp  Geometry.hpp  Qt.cpp  Qt.hpp
src/cpp/sigma/: Main.cpp
src/cpp/sigma/core/: Callback.hpp  CoreLogging.hpp
src/cpp/sigma/core/tasks/: RootTask.cpp  RootTask.hpp  Task.cpp  Task.hpp  TasksDomain.cpp  TasksDomain.hpp
src/cpp/sigma/core/util/: Logging.cpp  Logging.hpp  __util.hpp
src/cpp/sigma/gui/: GUIBootstrap.cpp  GUILogging.cpp  GUILogging.hpp  GUIMeta.cpp  GUIMeta.hpp  GUIMetaCompiled.cpp  GUIMetaCompiled.hpp
src/cpp/sigma/gui/startup/: SplashScreen.cpp
src/cxx/sigma/: __sigma.hpp
src/cxx/sigma/core/: Callback.hpp  CallbackManager.cpp  CallbackManager.hpp  CoreLogging.hpp  Sigma.cpp  Sigma.hpp
src/cxx/sigma/core/callback/: CallbackManager.hpp  CallbackMemberFunction.hpp
src/cxx/sigma/core/tasks/: RootTask.cpp  RootTask.hpp  Task.cpp  Task.hpp  TaskStructure.hpp  TasksDomain.cpp  TasksDomain.hpp
src/cxx/sigma/gui/: GUIBootstrap.cpp  GUIBootstrap.hpp  GUILogging.cpp  GUILogging.hpp  GUIMeta.cpp  GUIMeta.hpp  GUIMetaCompiled.cpp  GUIMetaCompiled.hpp
src/cxx/sigma/gui/startup/: SplashScreen.cpp  SplashScreen.hpp  __startup.hpp
src/prototyping/: QtTest.cpp
src/sigma_core/: Globals.hpp
src/sigma_core/tasks/: Task.hpp  TasksDomain.cpp  TasksDomain.hpp  TasksGlobals.hpp
tests/cpp/: TestsMain.cpp
tests/cpp/core/: Callback_TestSuite.cpp
tests/cpp/core/task/: TaskDomain_TestSuite.cpp  Task_TestSuite.cpp
tests/cxx/: TestsMain.cpp
tests/cxx/core/: Callback_TestSuite.cpp
tests/cxx/core/callback/: CallbackManager_TestSuite.cpp
tests/cxx/core/task/: RootTask_TestSuite.cpp  TaskDomain_TestSuite.cpp  Task_TestSuite.cpp
